chore: webpack work correct for js

--- a/src/styles.less
+++ b/src/styles.less
@@ -10,6 +10,7 @@
 }
 
 body {
+  color: red;
   height: 100vh;
   background: #3e5151;
   /* fallback for old browsers */
@@ -30,7 +31,7 @@ body {
 }
 
 h1 {
-  font: 20px/normal @font;
+  font: 20px / normal @font;
   color: @title;
   text-align: center;
 }
